# parrot

./: .gitignore  CMakeLists.txt  Makefile  README.md  clean_up.sh  egress.p4  headers.p4  options.p4  ports.json  routing.p4  setup_build.sh  tna_parrot_hash.p4  trait.hpp
benchs/: bench.cc  bench_insert.cc  mem.cc
chained/: chained_learned_hashing.hpp
client/: receiver.py  sender.py
controller/: base_table.py  controller.py  ports.py  ports.yaml  tables.py
cuckoo/: cuckoo_hashing.hpp
dpdk/: .gitignore  Makefile  cuckoo_l2fwd.cc  l2fwd.cc  learned_l2fwd.cc  ludo_l2fwd.cc  othello_l2fwd.cc  parrot_l2fwd.cc
dpdk/sender/: load_data.py  pcap_maker.py  pktgen.txt  sender.sh
dpdk_code/: Makefile  client.cc  pktgen.txt  server.cc
ludo/: ludo_cp_hashing.hpp  ludo_dp_hashing.hpp  ludo_hashing_with_fail_stats.hpp
othello/: othello_hashing.hpp
parrot/: parrot_hashing.hpp
tests/: chained_tests.cc  crc8_test.cc  hashs_test.cc  ludo_tests.cc  othello_tests.cc
utils/: builtins.hpp  load_data.h  pgm.hpp  pgm_index.hpp  piecewise_linear_model.hpp  rmi.hpp  support.hpp
utils/ludo/: common.h  crc64table.h  cuckoo_ht.h  hash.h  hashutil.h  othello_cp_dp.h
utils/ycsbc/workloads/: workloadc.spec
